# mh_special_char_keyboard_gui

./: .gitignore  README.md  _build_exe.bat  _push_to_github.bat  create_venv.bat  create_venv.sh  file_version_info.txt  init_repo.bat  init_repo.sh  mh_special_char_keyboard_gui.py  mh_special_char_keyboard_manual.rtf  pyproject.toml  requirements.txt  version.txt
backup/: __run_mh_keyboard.bat  mh_keyboard.py
docs/: LICENSE
